# 3dgame-cpp

./: CMakeLists.txt  README.md  test.cpp
src/: main.cpp
src/core/: Window.cpp  Window.h
src/graphics/: Direct3D.cpp  Direct3D.h
